# Soundscape_Evolution

./: Cargo.toml  LICENSE  README.md  Soundscape_evolution.txt
src/: config.rs  main.rs
src/audio/: analyzer.rs  mod.rs  player.rs
src/renderer/: color.rs  display.rs  mod.rs
src/simulation/: gol.rs  mod.rs  rules.rs
