[package]
name = "soundscape_evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.17.1"
rustfft = "6.1.0"
pixels = "0.13.0"
winit = "0.29.4"
noise = "0.8.2"
clap = { version = "4.4.0", features = ["derive"] }
rand = "0.8.5"
symphonia = { version = "0.5.3", features = ["mp3", "wav", "aac", "isomp4"] }
hound = "3.5.0"
# For multithreading
crossbeam-channel = "0.5.8"
# For audio data conversion
byteorder = "1.4.3"
# For error handling
anyhow = "1.0.75"
# For file-based configuration
toml = "0.7.6"
serde = { version = "1.0.188", features = ["derive"] }